Fix test command in package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha $(find ./tests -name *.tests.js) --opts=mocha.opts",
-    "test-watch": "mocha $(find ./tests -name *.tests.js) --opts=mocha.opts --watch"
+    "test": "mocha $(find ./tests -name *.tests.js) --opts mocha.opts",
+    "test-watch": "mocha $(find ./tests -name *.tests.js) --opts mocha.opts --watch"
   },
   "repository": {
     "type": "git",
