--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest-orm",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha",
   "description": "Simple ORM-like abstraction for REST API endpoints",
   "main": "src/index.js",
   "directories": {
