--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rest-orm",
+  "name": "restorage",
   "version": "1.1.1",
-  "description": "Simple ORM-like abstraction for REST API endpoints",
+  "description": "Simple abstraction for consuming REST API endpoints",
   "main": "src/index.js",
   "directories": {
     "doc": "docs",
@@ -13,19 +13,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ngonzalvez/rest-orm.git"
+    "url": "git+https://github.com/ngonzalvez/rest-facade.git"
   },
   "keywords": [
-    "orm",
+    "facade",
     "rest",
     "api"
   ],
   "author": "Nicolás Gonzálvez",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ngonzalvez/rest-orm/issues"
+    "url": "https://github.com/ngonzalvez/rest-facade/issues"
   },
-  "homepage": "https://github.com/ngonzalvez/rest-orm#readme",
+  "homepage": "https://github.com/ngonzalvez/rest-facade#readme",
   "devDependencies": {
     "chai": "^3.4.0",
     "mocha": "^2.3.3",
