--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restorage",
+  "name": "rest-facade",
   "version": "1.1.1",
   "description": "Simple abstraction for consuming REST API endpoints",
   "main": "src/index.js",
