--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bluebird": "^2.10.2",
     "change-case": "^2.3.0",
     "deepmerge": "^1.5.1",
+    "lodash.get": "^4.4.2",
     "superagent": "^3.8.0",
     "superagent-proxy": "^1.0.2"
   }
