--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "chai": "^3.4.0",
     "coveralls": "^2.13.3",
+    "istanbul": "^0.4.5",
     "mocha": "^2.3.3",
     "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.15.0",
