--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "mocha": "^2.3.3",
     "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.15.0",
-    "sinon": "^1.17.2"
+    "sinon": "^1.17.2",
+    "superagent-proxy": "^2.0.0"
   },
   "dependencies": {
     "change-case": "^2.3.0",
     "deepmerge": "^3.2.0",
     "lodash.get": "^4.4.2",
-    "superagent": "^5.1.1",
+    "superagent": "^5.1.1"
+  },
+  "peerDependencies": {
     "superagent-proxy": "^2.0.0"
   }
 }
