--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   "dependencies": {
     "change-case": "^2.3.0",
     "deepmerge": "^3.2.0",
-    "lodash.get": "^4.4.2"
-    "superagent": "^5.1.1",
+    "lodash.get": "^4.4.2",
+    "superagent": "^5.1.1"
   },
   "peerDependencies": {
     "superagent-proxy": "^3.0.0"
