fix: add peerDependenciesMeta to package.json for superagent-proxy

--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
   },
   "peerDependencies": {
     "superagent-proxy": "^3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "superagent-proxy": {
+      "optional": true
+    }
   }
 }
